@@ -27,3 +27,4 @@ Changelog
 08-03-2025 ... 0.7.0.0 ... Late Move Reductions ................. (64.3 +/- 25.2) , (8 + 0.08), (SPRT, 552), (https://sscg13.pythonanywhere.com/test/672/)
 08-06-2025 ... 0.8.0.0 ... SMP with Threadpool (2v1 elo shown) .. (83.8 +/- 17.3) , (8 + 0.08), (N = 1000) , (https://sscg13.pythonanywhere.com/test/690/) 
 08-06-2025 ... 0.8.0.1 ... Fix PV Table
+08-08-2025 ... 0.8.0.2 ... Mate Distance Prune in PV nodes
